--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>목동중3 교과서 배열영작 [ 목동서로 영어학원 ]</title>
+  <title>목일일중3 교과서 배열영작 [ 목동서로 영어학원 ]</title>
   <style>
     body { font-family: 'Arial Rounded MT Bold', Arial, sans-serif; padding: 24px; background: #f6f8fa; }
     .header {
@@ -53,7 +53,7 @@
 <body>
   <div class="header">
     <a href="https://nmyway77.github.io/home2/" class="home-btn-ko" title="홈으로 이동">홈으로</a>
-    목동중3 교과서배열영작[목동서로영어학원]
+    목일중3 교과서배열영작[목동서로영어학원]
   </div>
   <div class="lesson-select-bar">
     <select id="lessonSelect" onchange="goToLesson(this.value)"></select>
