--- a/index.html
+++ b/index.html
@@ -430,16 +430,217 @@
         ]
       },
       {
-        title: "Lesson 5 - A Surprise",
+        title: "Lesson 5 - From Trash to Music",
         problems: [
-          {
-            kor: "그 앞에 서 있는 남자는 L. J. Richards이다!",
-            eng: ["The", "man", "who", "is", "standing", "in", "front", "of", "him", "is", "L.", "J.", "Richards!"],
-          },
-          {
-            kor: "\"감사합니다만 저는 우승자가 아니에요.\" Max가 말한다.",
-            eng: ["\"Thank", "you,", "but", "I'm", "not", "the", "winner,\"", "says", "Max."],
-          },
+{
+  kor: "기쁨의 눈물이 내 뺨을 타고 흐른다.",
+  eng: ["Tears", "of", "joy", "are", "rolling", "down", "my", "cheeks", "."],
+},
+
+{
+  kor: "나는 너무 행복하고 감격스럽다.",
+  eng: ["I", "’", "m", "so", "happy", "and", "thrilled", "."],
+},
+
+{
+  kor: "내가 새라면 날아오를 것만 같다.",
+  eng: ["If", "I", "were", "a", "bird", ",", "I", "would", "fly", "."],
+},
+
+{
+  kor: "주위를 둘러본다.",
+  eng: ["I", "look", "around", "."],
+},
+
+{
+  kor: "내 오케스트라의 다른 단원들이 서로를 끌어안고 있다.",
+  eng: ["The", "other", "members", "in", "my", "orchestra", "are", "hugging", "one", "another", "."],
+},
+
+{
+  kor: "우리의 연주회가 막 끝났고 모두가 일어나 커다란 박수를 보내고 있다.",
+  eng: ["Our", "concert", "has", "just", "finished", "and", "everyone", "is", "standing", "and", "giving", "us", "a", "big", "hand", "."],
+},
+
+{
+  kor: "우리 중 누구도 이 날이 올 거라고는 생각하지 못했다.",
+  eng: ["None", "of", "us", "ever", "expected", "that", "this", "day", "would", "come", "."],
+},
+
+{
+  kor: "긴 여정이었다.",
+  eng: ["It", "has", "been", "a", "long", "journey", "."],
+},
+
+{
+  kor: "내 이름은 안드레아이고 나는 재활용 오케스트라의 바이올린 연주자다.",
+  eng: ["My", "name", "is", "Andrea", "and", "I", "’", "m", "a", "violinist", "in", "the", "Recycled", "Orchestra", "."],
+},
+
+{
+  kor: "왜 ‘재활용 오케스트라’라고 불릴까?",
+  eng: ["Why", "is", "it", "called", "the", "Recycled", "Orchestra", "?"],
+},
+
+{
+  kor: "그 이유는 우리의 악기가 모두 쓰레기 매립지에서 나온 물건으로 만들어졌기 때문이다.",
+  eng: ["It", "’", "s", "because", "our", "musical", "instruments", "are", "made", "of", "objects", "from", "a", "landfill", "."],
+},
+
+{
+  kor: "그래서 ‘매립지 하모닉 오케스트라’라고도 불린다.",
+  eng: ["That", "’", "s", "why", "it", "’", "s", "also", "known", "as", "the", "Landfill", "Harmonic", "Orchestra", "."],
+},
+
+{
+  kor: "우리 오케스트라의 대부분은 파라과이의 작은 마을 카테우라 출신이다.",
+  eng: ["Most", "of", "us", "in", "the", "orchestra", "are", "from", "Cateura", ",", "a", "small", "town", "in", "Paraguay", "."],
+},
+
+{
+  kor: "우리 마을에는 거대한 쓰레기 매립지가 있다.",
+  eng: ["There", "is", "a", "huge", "landfill", "in", "our", "town", "."],
+},
+
+{
+  kor: "어떤 사람들은 카테우라 자체가 거대한 매립지라고 말하기도 한다.",
+  eng: ["Some", "people", "even", "say", "that", "Cateura", "itself", "is", "a", "giant", "landfill", "."],
+},
+
+{
+  kor: "우리 중 많은 사람이 가난하다.",
+  eng: ["Many", "of", "us", "are", "poor", "."],
+},
+
+{
+  kor: "우리 마을에는 희망과 꿈이 별로 없었다.",
+  eng: ["There", "weren", "’", "t", "many", "hopes", "and", "dreams", "in", "our", "town", "."],
+},
+
+{
+  kor: "하지만 파비오 차베스를 만난 후 모든 것이 변하기 시작했다.",
+  eng: ["Everything", "began", "to", "change", ",", "however", ",", "when", "we", "met", "Favio", "Ch", "vez", "."],
+},
+
+{
+  kor: "파비오는 환경 교육자이자 음악가였다.",
+  eng: ["Favio", "was", "an", "environmental", "educator", "and", "a", "musician", "."],
+},
+
+{
+  kor: "그는 우리에게 음악을 가르치고 싶었지만 큰 문제가 있었다.",
+  eng: ["He", "wanted", "to", "teach", "us", "music", ",", "but", "there", "was", "a", "big", "problem", "."],
+},
+
+{
+  kor: "마을 전체에 악기가 몇 개밖에 없었다.",
+  eng: ["There", "were", "only", "a", "few", "musical", "instruments", "in", "the", "whole", "town", "."],
+},
+
+{
+  kor: "새 악기를 살 형편이 되지 않았다.",
+  eng: ["We", "couldn", "’", "t", "afford", "to", "buy", "new", "ones", "."],
+},
+
+{
+  kor: "그러나 파비오는 포기하지 않았다.",
+  eng: ["But", "Favio", "didn", "’", "t", "give", "up", "."],
+},
+
+{
+  kor: "그는 매립지의 물건들로 악기를 만들 수 있다고 말했다.",
+  eng: ["He", "said", "that", "we", "could", "make", "musical", "instruments", "with", "objects", "from", "the", "landfill", "."],
+},
+
+{
+  kor: "니콜라스라는 재능 있는 사람이 이 아이디어를 실제로 구현해냈다.",
+  eng: ["A", "talented", "man", "named", "Nicholas", "was", "able", "to", "put", "this", "idea", "into", "practice", "."],
+},
+
+{
+  kor: "그는 기름 통으로 바이올린을 만들었다.",
+  eng: ["He", "made", "violins", "from", "oil", "drums", "."],
+},
+
+{
+  kor: "그는 수도관을 플루트로 바꾸었다.",
+  eng: ["He", "turned", "water", "pipes", "into", "flutes", "."],
+},
+
+{
+  kor: "우리는 또 다른 문제에 부딪혔다.",
+  eng: ["We", "had", "another", "problem", "."],
+},
+
+{
+  kor: "아무도 악기를 다룰 줄 몰랐다.",
+  eng: ["No", "one", "knew", "how", "to", "play", "musical", "instruments", "."],
+},
+
+{
+  kor: "음악 악보 읽는 법조차 몰랐다.",
+  eng: ["We", "didn", "’", "t", "even", "know", "how", "to", "read", "music", "."],
+},
+
+{
+  kor: "파비오는 큰 인내심을 가지고 우리를 가르쳤다.",
+  eng: ["Favio", "taught", "us", "with", "great", "patience", "."],
+},
+
+{
+  kor: "한 걸음씩 악기로 소리를 내기 시작했다.",
+  eng: ["Step", "by", "step", ",", "we", "began", "to", "make", "some", "sounds", "on", "our", "instruments", "."],
+},
+
+{
+  kor: "내가 우리가 처음 연주한 곡이 아직도 기억난다.",
+  eng: ["I", "still", "remember", "the", "first", "piece", "of", "music", "that", "we", "played", "."],
+},
+
+{
+  kor: "아주 짧았고 음정도 대부분 맞지 않았다.",
+  eng: ["It", "was", "very", "short", "and", "mostly", "out", "of", "tune", "."],
+},
+
+{
+  kor: "그러나 우리에게는 가장 아름다운 음악이었다.",
+  eng: ["But", "it", "was", "the", "most", "beautiful", "music", "to", "us", "."],
+},
+
+{
+  kor: "우리의 마음속에 새로운 희망이 차올랐다.",
+  eng: ["We", "felt", "a", "new", "hope", "in", "our", "hearts", "."],
+},
+
+{
+  kor: "그때부터 우리는 매일 모여 연습했다.",
+  eng: ["From", "then", "on", ",", "we", "gathered", "to", "practice", "every", "day", "."],
+},
+
+{
+  kor: "어느 날 파비오는 우리에게 기쁜 소식을 전했다.",
+  eng: ["One", "day", ",", "Favio", "told", "us", "some", "great", "news", "."],
+},
+
+{
+  kor: "우리는 콘서트를 열 예정이었다. 진짜 콘서트였다!",
+  eng: ["We", "were", "going", "to", "have", "a", "concert", ",", "a", "real", "concert", "!"],
+},
+
+{
+  kor: "그리고 지금 우리는 수백 명 앞에 서 있다.",
+  eng: ["And", "here", "we", "are", "now", "in", "front", "of", "hundreds", "of", "people", "."],
+},
+
+{
+  kor: "그들은 우리 음악을 사랑한다.",
+  eng: ["They", "love", "our", "music", "."],
+},
+
+{
+  kor: "세상은 우리에게 쓰레기를 보내지만, 우리는 음악을 돌려준다!",
+  eng: ["The", "world", "sends", "us", "trash", ",", "but", "we", "send", "back", "music", "!"],
+},
         ]
       },
       {
