--- a/index.html
+++ b/index.html
@@ -70,94 +70,196 @@
     // 1~10과 샘플 데이터 (1과만 예시, 2~10은 샘플 문제)
     const lessons = [
       {
-        title: "Lesson 1 - Go-Kart Race",
+        title: "Lesson 1 - HOLES,
         problems: [
-{  kor: "랩을 내뱉어 봐",
-  eng: ["RAP", "it", "OUT"],
+{
+  kor: "더 열심히 파, 스탠리! 더 세게 팔수록 더 빨리 끝낼 수 있어!” 하고 Mr. Sir가 소리쳤다.",
+  eng: ["Dig", "harder", ",", "Stanley", "!", "The", "harder", "you", "dig", ",", "the", "faster", "you", "’", "ll", "finish", "!", "”", "yelled", "Mr", ".", "Sir", "."],
 },
-{  kor: "마음을 열고, 가슴을 열어 봐",
-  eng: ["Open", "Your", "MIND", ",", "Open", "Your", "HEART"],
+
+{
+  kor: "스탠리 옐내츠는 모든 근육이 쑤셔서 더 세게 팠다간 몸이 부서질 것 같았다.",
+  eng: ["Stanley", "Yelnats", "couldn", "’", "t", "dig", "any", "harder", "since", "every", "single", "muscle", "hurt", "."],
 },
-{  kor: "주위를 둘러보고 랩을 내뱉어 보자",
-  eng: ["Look", "AROUND", "and", "Let", "’", "s", "Rap", "It", "OUT"],
+
+{
+  kor: "그는 목이 말랐고 배도 고팠다.",
+  eng: ["He", "was", "thirsty", "and", "hungry", "."],
 },
-{  kor: "안녕, 나는 MC Joy야. 너도 너만의 랩을 써 보고 싶니?",
-  eng: ["Hey", ",", "I", "’", "m", "MC", "Joy", ".", "Do", "you", "want", "to", "write", "your", "own", "rap", "?"],
+
+{
+  kor: "집에 가고 싶었다.",
+  eng: ["He", "wanted", "to", "go", "home", "."],
 },
-{  kor: "무엇이든 랩의 주제가 될 수 있어, 모든 것이 랩 이야기가 될 수 있으니까.",
-  eng: ["You", "can", "rap", "about", "anything", "because", "everything", "can", "be", "a", "story", "for", "a", "rap", "."],
+
+{
+  kor: "안타깝게도 앞으로 18개월 동안 스탠리가 집이라고 부를 곳은 바로 이곳, 캠프 그린 레이크였다.",
+  eng: ["Unfortunately", ",", "Stanley", "’", "s", "home", "for", "the", "next", "18", "months", "would", "be", "right", "here", ",", "at", "Camp", "Green", "Lake", "."],
 },
-{  kor: "나는 버스에서든, 샤워할 때든, 침대에 누워 있을 때든 아이디어를 얻어.",
-  eng: ["I", "get", "ideas", "when", "I", "’", "m", "on", "the", "bus", ",", "in", "the", "shower", ",", "or", "in", "my", "bed", "."],
+
+{
+  kor: "캠프 그린 레이크라는 이름은 끔찍했다.",
+  eng: ["Camp", "Green", "Lake", "was", "a", "terrible", "name", "."],
 },
-{  kor: "아이디어를 적어 두었다가 랩을 쓸 때 활용하지.",
-  eng: ["I", "write", "down", "my", "ideas", "and", "use", "them", "when", "I", "write", "my", "rap", "."],
+
+{
+  kor: "초록색은커녕 호수도 없었다.",
+  eng: ["It", "wasn", "’", "t", "green", "and", "there", "was", "no", "lake", "."],
 },
-{  kor: "랩을 쓰는 데는 규칙이 없어. 오늘 당장 시작해 봐!",
-  eng: ["There", "are", "no", "rules", "for", "writing", "raps", ".", "You", "can", "start", "today", "!"],
+
+{
+  kor: "캠프 그린 레이크는 덥고 모래투성이였다.",
+  eng: ["Camp", "Green", "Lake", "was", "hot", "and", "full", "of", "sand", "."],
 },
-{  kor: "환상적인 반려동물",
-  eng: ["Fantastic", "Pets"],
+
+{
+  kor: "사실 캠프라고 부를 수도 없었다.",
+  eng: ["In", "fact", ",", "it", "wasn", "’", "t", "even", "a", "camp", "."],
 },
-{  kor: "환상적인 반려동물에 오신 것을 환영해! 반려동물을 기르는 것은 정말 멋진 일이야.",
-  eng: ["Welcome", "to", "Fantastic", "Pets", "!", "Having", "a", "pet", "is", "great", "."],
+
+{
+  kor: "나쁜 소년들을 위한 곳이었다.",
+  eng: ["It", "was", "a", "place", "for", "bad", "boys", "."],
 },
-{  kor: "오늘은 내 반려 고슴도치 폴리를 소개할 거야.",
-  eng: ["Today", "I", "’", "m", "going", "to", "introduce", "my", "pet", "hedgehog", ",", "Polly", "."],
+
+{
+  kor: "그렇다면 착한 소년인 스탠리가 여기 온 이유는 무엇이었을까?",
+  eng: ["Then", "what", "was", "a", "good", "boy", "like", "Stanley", "doing", "here", "?"],
 },
-{  kor: "처음 폴리를 데려왔을 때, 그녀는 매우 겁을 먹고 있었어.",
-  eng: ["When", "I", "first", "got", "Polly", ",", "she", "was", "very", "scared", "."],
+
+{
+  kor: "그는 운동화 한 켤레를 훔쳤다는 이유로 이곳에 보내졌다.",
+  eng: ["He", "was", "sent", "to", "the", "camp", "for", "stealing", "a", "pair", "of", "sneakers", "."],
 },
-{  kor: "그녀가 가시를 세우느라 나는 안을 수조차 없었지.",
-  eng: ["I", "couldn't", "hold", "her", "because", "she", "raised", "her", "spikes", "."],
+
+{
+  kor: "스탠리가 실제로 운동화를 훔친 것은 아니었다.",
+  eng: ["Stanley", "didn", "’", "t", "really", "steal", "a", "pair", "of", "sneakers", "."],
 },
-{  kor: "그래서 나는 내 티셔츠를 우리 안에 넣었고, 폴리는 내 냄새에 익숙해졌어.",
-  eng: ["So", ",", "I", "placed", "my", "T-shirt", "in", "her", "cage", "and", "she", "got", "used", "to", "my", "smell", "."],
+
+{
+  kor: "그저 잘못된 시간에 잘못된 장소에 있었을 뿐이었다.",
+  eng: ["He", "was", "just", "in", "the", "wrong", "place", "at", "the", "wrong", "time", "."],
 },
-{  kor: "마침내 나는 폴리를 손에 안을 수 있게 되었어.",
-  eng: ["Finally", ",", "I", "was", "able", "to", "hold", "her", "in", "my", "hands", "."],
+
+{
+  kor: "어느 날 그는 학교에서 집으로 걸어가고 있었다.",
+  eng: ["One", "day", ",", "he", "was", "walking", "home", "from", "school", "."],
 },
-{  kor: "지금은 폴리가 내 가장 친한 친구가 되어 항상 나를 행복하게 해 줘.",
-  eng: ["Now", ",", "Polly", "is", "my", "best", "friend", "and", "always", "makes", "me", "happy", "."],
+
+{
+  kor: "갑자기 허름한 운동화 한 켤레가 하늘에서 떨어졌다.",
+  eng: ["Suddenly", ",", "a", "pair", "of", "old", "sneakers", "fell", "from", "the", "sky", "."],
 },
-{  kor: "유용한 팁",
-  eng: ["Handy", "Tips"],
+
+{
+  kor: "운동화는 그의 머리를 강타했다.",
+  eng: ["The", "sneakers", "hit", "him", "on", "the", "head", "."],
 },
-{  kor: "다시 찾아온 유용한 팁입니다.",
-  eng: ["Welcome", "back", "to", "Handy", "Tips", "."],
+
+{
+  kor: "그는 무슨 일인지 아버지에게 알리려고 운동화를 들고 뛰기 시작했다.",
+  eng: ["He", "started", "running", "with", "the", "sneakers", "to", "tell", "his", "father", "what", "happened", "."],
 },
-{  kor: "보통 영화관에서 어디에 앉니?",
-  eng: ["Where", "do", "you", "normally", "sit", "in", "a", "movie", "theater", "?"],
+
+{
+  kor: "몇 분 후 경찰이 스탠리를 멈추고 왜 뛰고 있는지 물었다.",
+  eng: ["A", "few", "minutes", "later", ",", "the", "police", "stopped", "Stanley", "and", "asked", "him", "why", "he", "was", "running", "."],
 },
-{  kor: "여기 팁 하나. 쉽게 따라할 수 있고 도움이 될 거야.",
-  eng: ["Here", "is", "a", "tip", ".", "You", "will", "find", "it", "easy", "and", "helpful", "."],
+
+{
+  kor: "불행히도 그 운동화는 유명 야구 선수 클라이드 리빙스턴의 것이었다.",
+  eng: ["Unfortunately", "for", "Stanley", ",", "the", "sneakers", "belonged", "to", "a", "famous", "baseball", "player", ",", "Clyde", "Livingstone", "."],
 },
-{  kor: "먼 곳을 향해 손가락을 가리켜 봐.",
-  eng: ["Point", "your", "finger", "at", "something", "far", "from", "you", "."],
+
+{
+  kor: "그 때문에 스탠리는 캠프 그린 레이크에 오게 된 것이다.",
+  eng: ["That", "was", "why", "Stanley", "ended", "up", "at", "Camp", "Green", "Lake", "."],
 },
-{  kor: "한쪽 눈을 감았다 다시 떠 봐.",
-  eng: ["Close", "one", "eye", "and", "open", "it", "."],
+
+{
+  kor: "스탠리는 캠프에서 D조에 배정되었다.",
+  eng: ["Stanley", "was", "assigned", "to", "Group", "D", "in", "the", "camp", "."],
 },
-{  kor: "반대쪽 눈으로도 반복해 봐.",
-  eng: ["Repeat", "it", "with", "the", "other", "eye", "."],
+
+{
+  kor: "스탠리의 조에는 여섯 명의 소년이 더 있었다.",
+  eng: ["There", "were", "six", "other", "boys", "in", "Stanley", "’", "s", "group", "."],
 },
-{  kor: "언제 손가락이 움직이니?",
-  eng: ["When", "does", "your", "finger", "move", "?"],
+
+{
+  kor: "그들은 모두 X-Ray, Zigzag, Zero 같은 멋진 별명을 가지고 있었다.",
+  eng: ["They", "all", "had", "cool", "names", "like", "X-Ray", ",", "Zigzag", "and", "Zero", "."],
 },
-{  kor: "오른쪽 눈을 감을 때 움직이나?",
-  eng: ["Is", "it", "when", "you", "close", "your", "right", "eye", "?"],
+
+{
+  kor: "각 소년은 매일 구덩이 하나를 파야 했다.",
+  eng: ["Each", "boy", "had", "to", "dig", "one", "hole", "every", "day", "."],
 },
-{  kor: "그렇다면 네가 주로 사용하는 눈은 오른쪽이야.",
-  eng: ["Then", "you", "mainly", "use", "your", "right", "eye", "."],
+
+{
+  kor: "깊이와 너비가 각각 약 150cm여야 했다.",
+  eng: ["It", "had", "to", "be", "about", "150cm", "deep", "and", "150cm", "wide", "."],
 },
-{  kor: "이 말은 영화관에서 왼쪽 자리에 앉아야 한다는 뜻이지.",
-  eng: ["This", "means", "you", "should", "sit", "on", "the", "left", "side", "in", "the", "theater", "."],
+
+{
+  kor: "Mr. Sir는 “너희가 캐는 것은 인성을 기르기 위해서야.”라고 말했다.",
+  eng: ["Mr", ".", "Sir", "said", ",", "“", "You", "are", "digging", "to", "build", "character", ".", "”"],
 },
-{  kor: "그래야 스크린을 더 잘 볼 수 있어.",
-  eng: ["That", "way", ",", "you", "can", "enjoy", "a", "full", "view", "of", "the", "screen", "better", "."],
+
+{
+  kor: "스탠리가 더 많이 팔수록 그는 더 강해졌다.",
+  eng: ["The", "more", "Stanley", "dug", ",", "the", "stronger", "he", "became", "."],
 },
-{  kor: "이 정보는 교실에서 자리 선택할 때도 유용해.",
-  eng: ["This", "information", "is", "also", "helpful", "when", "you", "choose", "a", "seat", "in", "a", "classroom", ",", "too", "."],
+
+{
+  kor: "매일 구덩이를 파는 데 걸리는 시간이 줄어들었다.",
+  eng: ["It", "took", "less", "time", "to", "finish", "his", "hole", "each", "day", "."],
+},
+
+{
+  kor: "두 번째 주에 스탠리가 구덩이를 거의 마무리할 때 흙 속에서 반짝이는 것을 발견했다.",
+  eng: ["In", "his", "second", "week", ",", "as", "Stanley", "was", "finishing", "his", "hole", ",", "he", "saw", "something", "shiny", "in", "the", "dirt", "."],
+},
+
+{
+  kor: "스탠리의 심장은 빠르게 뛰기 시작했다.",
+  eng: ["Stanley", "’", "s", "heart", "beat", "faster", "."],
+},
+
+{
+  kor: "흥미로운 것을 찾으면 하루 휴가를 준다는 말을 들은 적이 있었다.",
+  eng: ["He", "heard", "that", "anyone", "who", "found", "something", "interesting", "would", "be", "given", "the", "day", "off", "."],
+},
+
+{
+  kor: "스탠리는 조심스럽게 반짝이는 물체를 집어들어 흙을 털어냈다.",
+  eng: ["He", "carefully", "picked", "up", "the", "shiny", "object", "and", "brushed", "off", "the", "dirt", "."],
+},
+
+{
+  kor: "작고 금빛이 도는 관 모양의 물체였다.",
+  eng: ["It", "was", "a", "small", "gold", "tube", "."],
+},
+
+{
+  kor: "너무 가벼워서 진짜 금관일 리는 없었다.",
+  eng: ["But", "it", "couldn", "’", "t", "be", "real", "gold", "since", "it", "was", "too", "light", "."],
+},
+
+{
+  kor: "관 밑부분에는 KB라는 두 글자가 새겨져 있었다.",
+  eng: ["There", "were", "two", "letters", ",", "KB", ",", "at", "the", "bottom", "of", "the", "tube", "."],
+},
+
+{
+  kor: "KB는 무엇을 뜻하는 걸까?",
+  eng: ["What", "did", "KB", "stand", "for", "?"],
+},
+
+{
+  kor: "스탠리의 심장은 더욱 빠르게 뛰었다.",
+  eng: ["Stanley", "’", "s", "heart", "beat", "even", "faster", "."],
 },
         ]
       },
@@ -325,108 +427,197 @@
         ]
       },
       {
-        title: "Lesson 4 - Max's Effort",
+        title: "Lesson 4 - HOLES",
         problems: [
-          {
-    kor: "고카트 경기 트랙에 신이 나서 응원하는 많은 사람들이 있다.",
-    eng: ["At", "the", "go-kart", "race", "track,", "there", "are", "many", "people", "who", "are", "cheering", "excitedly."],
-  },
-  {
-    kor: "시끄러운 엔진 소음을 내고 있는 카트들이 대기하고 있다.",
-    eng: ["The", "karts", "that", "are", "making", "loud", "engine", "noises", "are", "waiting."],
-  },
-  {
-    kor: "심판이 녹색 깃발을 흔들고, 경기가 시작된다!",
-    eng: ["An", "official", "waves", "a", "green", "flag", "and", "the", "race", "starts!"],
-  },
-  {
-    kor: "Max는 트랙에서 여섯 바퀴를 마치면서 가속 페달을 힘껏 발로 누른다.",
-    eng: ["Max", "pushes", "his", "foot", "down", "hard", "on", "the", "gas", "pedal", "as", "he", "completes", "his", "sixth", "lap", "on", "the", "track."],
-  },
-  {
-    kor: "직선 구간에서 Max는 경기의 선두인 Simon의 바로 옆까지 다가간다.",
-    eng: ["On", "the", "straightaway,", "Max", "pulls", "right", "beside", "the", "race's", "leader,", "Simon."],
-  },
-  {
-    kor: "작년에 Simon은 많은 경기에서 우승했지만, 경기에서 Max의 최고 성적은 5등으로 들어온 것이었다.",
-    eng: ["Last", "year,", "Simon", "won", "many", "races,", "but", "Max's", "best", "result", "in", "a", "race", "was", "coming", "in", "fifth", "place."],
-  },
-  {
-    kor: "이번에 그는 2등으로 경기를 마칠 기회가 있다.",
-    eng: ["This", "time,", "he", "has", "a", "chance", "to", "finish", "second."],
-  },
-  {
-    kor: "그러나 그는 오늘 2등으로 만족하지 않을 것이다.",
-    eng: ["But", "he", "isn't", "going", "to", "be", "satisfied", "with", "second", "place", "today."],
-  },
-  {
-    kor: "우승자는 세계적으로 유명한 경주 선수인 L. J. Richards를 만나게 된다!",
-    eng: ["The", "winner", "gets", "to", "meet", "the", "world", "famous", "racer", "L.", "J.", "Richards!"],
-  },
-  {
-    kor: "그는 그의 롤 모델을 만날 수 있는 기회를 놓치고 싶지 않다.",
-    eng: ["He", "doesn't", "want", "to", "miss", "the", "chance", "to", "meet", "his", "role", "model."],
-  },
-  {
-    kor: "Max는 열 바퀴를 마치고 이제 다섯 바퀴가 더 남았다.",
-    eng: ["Max", "completes", "the", "tenth", "lap", "and", "now", "has", "five", "more", "laps", "to", "go."],
-  },
-  {
-    kor: "Max는 바로 닿을 듯한 거리 앞에 있는 Simon의 카트를 본다.",
-    eng: ["Max", "sees", "Simon's", "kart", "ahead,", "just", "out", "of", "Max's", "reach."],
-  },
-  {
-    kor: "Max의 카트는 Simon의 카트에 점점 더 가까이 다가간다.",
-    eng: ["Max's", "kart", "gets", "closer", "and", "closer", "to", "Simon's."],
-  },
-  {
-    kor: "그것은 Simon의 카트 뒷부분에 부딪칠락 말락 하다.",
-    eng: ["It", "almost", "hits", "the", "back", "end", "of", "Simon's", "kart."],
-  },
-  {
-    kor: "그들은 직선 구간으로 차를 몰고 들어가고, Max는 가속 페달을 더 세게 밟는다. '나는 따라잡을 수 있어.' Max가 말한다.",
-    eng: ["They", "drive", "into", "the", "straightaway", "and", "Max", "presses", "harder", "on", "the", "gas", "pedal.", "\"I", "can", "catch", "up,\"", "says", "Max."],
-  },
-  {
-    kor: "Max는 심판이 마지막 바퀴라는 것을 알려 주는 흰색 깃발을 흔드는 것을 본다. Max는 Simon의 바로 뒤에 있다.",
-    eng: ["Max", "sees", "the", "official", "waving", "a", "white", "flag", "which", "means", "the", "last", "lap.", "Max", "is", "right", "behind", "Simon."],
-  },
-  {
-    kor: "결승선이 점점 가까워지고, 관중들의 환호성은 점점 더 커진다.",
-    eng: ["The", "finish", "line", "is", "getting", "closer,", "and", "the", "cheering", "from", "the", "crowd", "is", "getting", "louder."],
-  },
-  {
-    kor: "'나는 할 수 있어!' Max는 큰소리로 외친다. 그는 그의 심장이 빠르게 뛰는 것을 느낄 수 있다.",
-    eng: ["\"I", "can", "do", "it!\"", "Max", "says", "loudly.", "He", "can", "feel", "his", "heart", "beating", "hard."],
-  },
-  {
-    kor: "카트들이 급히 달려 결승선을 지나간다. 누가 우승자일까?",
-    eng: ["The", "karts", "rush", "across", "the", "finish", "line.", "Who", "is", "the", "winner?"],
-  },
-  {
-    kor: "Max가 자신이 2등으로 들어왔다는 것을 깨닫자 그의 눈은 눈물로 가득 찬다.",
-    eng: ["Max's", "eyes", "are", "filled", "with", "tears", "as", "he", "finds", "out", "that", "he", "came", "in", "second."],
-  },
-  {
-    kor: "\"울 필요 없단다, 얘야.\" 어떤 남자가 말한다. Max는 그의 눈을 믿을 수 없다.",
-    eng: ["\"No", "need", "for", "tears,", "kid,\"", "says", "a", "man's", "voice.", "Max", "can't", "believe", "his", "eyes."],
-  },
-  {
-    kor: "그 앞에 서 있는 남자는 L. J. Richards이다!",
-    eng: ["The", "man", "who", "is", "standing", "in", "front", "of", "him", "is", "L.", "J.", "Richards!"],
-  },
-  {
-    kor: "\"감사합니다만 저는 우승자가 아니에요.\" Max가 말한다.",
-    eng: ["\"Thank", "you,", "but", "I'm", "not", "the", "winner,\"", "says", "Max."],
-  },
-  {
-    kor: "\"정말 아슬아슬한 경기였어. 너는 비록 경기에서 우승하지 못했지만 최선을 다했잖니. 중요한 것은 바로 그거란다!\" L. J. Richards가 말한다.",
-    eng: ["\"It", "was", "a", "real", "close", "race.", "Even", "though", "you", "didn't", "win", "the", "race,", "you", "did", "your", "best.", "That's", "the", "thing", "that", "counts!\"", "says", "L.", "J.", "Richards."],
-  },
-  {
-    kor: "'내가 최선을 다했었나?' Max는 생각한다. 잠시 후에 그는 미소를 짓는다. \"네, 저는 최선을 다했다고 생각해요.\"",
-    eng: ["'Did", "I", "do", "my", "best?'", "thinks", "Max.", "After", "a", "moment,", "he", "smiles.", "\"Yeah,", "I", "guess", "I", "did.\""],
-  }
+{
+  kor: "더 열심히 파, 스탠리! 더 세게 팔수록 더 빨리 끝낼 수 있어!” 하고 Mr. Sir가 소리쳤다.",
+  eng: ["Dig", "harder", ",", "Stanley", "!", "The", "harder", "you", "dig", ",", "the", "faster", "you", "’", "ll", "finish", "!", "”", "yelled", "Mr", ".", "Sir", "."],
+},
+
+{
+  kor: "스탠리 옐내츠는 모든 근육이 쑤셔서 더 세게 팠다간 몸이 부서질 것 같았다.",
+  eng: ["Stanley", "Yelnats", "couldn", "’", "t", "dig", "any", "harder", "since", "every", "single", "muscle", "hurt", "."],
+},
+
+{
+  kor: "그는 목이 말랐고 배도 고팠다.",
+  eng: ["He", "was", "thirsty", "and", "hungry", "."],
+},
+
+{
+  kor: "집에 가고 싶었다.",
+  eng: ["He", "wanted", "to", "go", "home", "."],
+},
+
+{
+  kor: "안타깝게도 앞으로 18개월 동안 스탠리가 집이라고 부를 곳은 바로 이곳, 캠프 그린 레이크였다.",
+  eng: ["Unfortunately", ",", "Stanley", "’", "s", "home", "for", "the", "next", "18", "months", "would", "be", "right", "here", ",", "at", "Camp", "Green", "Lake", "."],
+},
+
+{
+  kor: "캠프 그린 레이크라는 이름은 끔찍했다.",
+  eng: ["Camp", "Green", "Lake", "was", "a", "terrible", "name", "."],
+},
+
+{
+  kor: "초록색은커녕 호수도 없었다.",
+  eng: ["It", "wasn", "’", "t", "green", "and", "there", "was", "no", "lake", "."],
+},
+
+{
+  kor: "캠프 그린 레이크는 덥고 모래투성이였다.",
+  eng: ["Camp", "Green", "Lake", "was", "hot", "and", "full", "of", "sand", "."],
+},
+
+{
+  kor: "사실 캠프라고 부를 수도 없었다.",
+  eng: ["In", "fact", ",", "it", "wasn", "’", "t", "even", "a", "camp", "."],
+},
+
+{
+  kor: "나쁜 소년들을 위한 곳이었다.",
+  eng: ["It", "was", "a", "place", "for", "bad", "boys", "."],
+},
+
+{
+  kor: "그렇다면 착한 소년인 스탠리가 여기 온 이유는 무엇이었을까?",
+  eng: ["Then", "what", "was", "a", "good", "boy", "like", "Stanley", "doing", "here", "?"],
+},
+
+{
+  kor: "그는 운동화 한 켤레를 훔쳤다는 이유로 이곳에 보내졌다.",
+  eng: ["He", "was", "sent", "to", "the", "camp", "for", "stealing", "a", "pair", "of", "sneakers", "."],
+},
+
+{
+  kor: "스탠리가 실제로 운동화를 훔친 것은 아니었다.",
+  eng: ["Stanley", "didn", "’", "t", "really", "steal", "a", "pair", "of", "sneakers", "."],
+},
+
+{
+  kor: "그저 잘못된 시간에 잘못된 장소에 있었을 뿐이었다.",
+  eng: ["He", "was", "just", "in", "the", "wrong", "place", "at", "the", "wrong", "time", "."],
+},
+
+{
+  kor: "어느 날 그는 학교에서 집으로 걸어가고 있었다.",
+  eng: ["One", "day", ",", "he", "was", "walking", "home", "from", "school", "."],
+},
+
+{
+  kor: "갑자기 허름한 운동화 한 켤레가 하늘에서 떨어졌다.",
+  eng: ["Suddenly", ",", "a", "pair", "of", "old", "sneakers", "fell", "from", "the", "sky", "."],
+},
+
+{
+  kor: "운동화는 그의 머리를 강타했다.",
+  eng: ["The", "sneakers", "hit", "him", "on", "the", "head", "."],
+},
+
+{
+  kor: "그는 무슨 일인지 아버지에게 알리려고 운동화를 들고 뛰기 시작했다.",
+  eng: ["He", "started", "running", "with", "the", "sneakers", "to", "tell", "his", "father", "what", "happened", "."],
+},
+
+{
+  kor: "몇 분 후 경찰이 스탠리를 멈추고 왜 뛰고 있는지 물었다.",
+  eng: ["A", "few", "minutes", "later", ",", "the", "police", "stopped", "Stanley", "and", "asked", "him", "why", "he", "was", "running", "."],
+},
+
+{
+  kor: "불행히도 그 운동화는 유명 야구 선수 클라이드 리빙스턴의 것이었다.",
+  eng: ["Unfortunately", "for", "Stanley", ",", "the", "sneakers", "belonged", "to", "a", "famous", "baseball", "player", ",", "Clyde", "Livingstone", "."],
+},
+
+{
+  kor: "그 때문에 스탠리는 캠프 그린 레이크에 오게 된 것이다.",
+  eng: ["That", "was", "why", "Stanley", "ended", "up", "at", "Camp", "Green", "Lake", "."],
+},
+
+{
+  kor: "스탠리는 캠프에서 D조에 배정되었다.",
+  eng: ["Stanley", "was", "assigned", "to", "Group", "D", "in", "the", "camp", "."],
+},
+
+{
+  kor: "스탠리의 조에는 여섯 명의 소년이 더 있었다.",
+  eng: ["There", "were", "six", "other", "boys", "in", "Stanley", "’", "s", "group", "."],
+},
+
+{
+  kor: "그들은 모두 X-Ray, Zigzag, Zero 같은 멋진 별명을 가지고 있었다.",
+  eng: ["They", "all", "had", "cool", "names", "like", "X-Ray", ",", "Zigzag", "and", "Zero", "."],
+},
+
+{
+  kor: "각 소년은 매일 구덩이 하나를 파야 했다.",
+  eng: ["Each", "boy", "had", "to", "dig", "one", "hole", "every", "day", "."],
+},
+
+{
+  kor: "깊이와 너비가 각각 약 150cm여야 했다.",
+  eng: ["It", "had", "to", "be", "about", "150cm", "deep", "and", "150cm", "wide", "."],
+},
+
+{
+  kor: "Mr. Sir는 “너희가 캐는 것은 인성을 기르기 위해서야.”라고 말했다.",
+  eng: ["Mr", ".", "Sir", "said", ",", "“", "You", "are", "digging", "to", "build", "character", ".", "”"],
+},
+
+{
+  kor: "스탠리가 더 많이 팔수록 그는 더 강해졌다.",
+  eng: ["The", "more", "Stanley", "dug", ",", "the", "stronger", "he", "became", "."],
+},
+
+{
+  kor: "매일 구덩이를 파는 데 걸리는 시간이 줄어들었다.",
+  eng: ["It", "took", "less", "time", "to", "finish", "his", "hole", "each", "day", "."],
+},
+
+{
+  kor: "두 번째 주에 스탠리가 구덩이를 거의 마무리할 때 흙 속에서 반짝이는 것을 발견했다.",
+  eng: ["In", "his", "second", "week", ",", "as", "Stanley", "was", "finishing", "his", "hole", ",", "he", "saw", "something", "shiny", "in", "the", "dirt", "."],
+},
+
+{
+  kor: "스탠리의 심장은 빠르게 뛰기 시작했다.",
+  eng: ["Stanley", "’", "s", "heart", "beat", "faster", "."],
+},
+
+{
+  kor: "흥미로운 것을 찾으면 하루 휴가를 준다는 말을 들은 적이 있었다.",
+  eng: ["He", "heard", "that", "anyone", "who", "found", "something", "interesting", "would", "be", "given", "the", "day", "off", "."],
+},
+
+{
+  kor: "스탠리는 조심스럽게 반짝이는 물체를 집어들어 흙을 털어냈다.",
+  eng: ["He", "carefully", "picked", "up", "the", "shiny", "object", "and", "brushed", "off", "the", "dirt", "."],
+},
+
+{
+  kor: "작고 금빛이 도는 관 모양의 물체였다.",
+  eng: ["It", "was", "a", "small", "gold", "tube", "."],
+},
+
+{
+  kor: "너무 가벼워서 진짜 금관일 리는 없었다.",
+  eng: ["But", "it", "couldn", "’", "t", "be", "real", "gold", "since", "it", "was", "too", "light", "."],
+},
+
+{
+  kor: "관 밑부분에는 KB라는 두 글자가 새겨져 있었다.",
+  eng: ["There", "were", "two", "letters", ",", "KB", ",", "at", "the", "bottom", "of", "the", "tube", "."],
+},
+
+{
+  kor: "KB는 무엇을 뜻하는 걸까?",
+  eng: ["What", "did", "KB", "stand", "for", "?"],
+},
+
+{
+  kor: "스탠리의 심장은 더욱 빠르게 뛰었다.",
+  eng: ["Stanley", "’", "s", "heart", "beat", "even", "faster", "."],
+},
         ]
       },
       {
