--- a/index.html
+++ b/index.html
@@ -454,213 +454,193 @@
         title: "Lesson 4 - Be a Smart Spender",
         problems: [
 {
-  kor: "당신은 돈에 관해 얼마나 현명한가?",
-  eng: ["How", "smart", "are", "you", "with", "your", "money", "?"],
+  kor: "더 열심히 파, 스탠리! 더 세게 팔수록 더 빨리 끝낼 수 있어!” 하고 Mr. Sir가 소리쳤다.",
+  eng: ["Dig", "harder", ",", "Stanley", "!", "The", "harder", "you", "dig", ",", "the", "faster", "you", "’", "ll", "finish", "!", "”", "yelled", "Mr", ".", "Sir", "."],
 },
 
 {
-  kor: "이것은 Green 중학교 학생 100명의 설문 조사 결과이다.",
-  eng: ["These", "are", "the", "results", "of", "a", "survey", "of", "100", "students", "at", "Green", "Middle", "School", "."],
+  kor: "스탠리 옐내츠는 모든 근육이 쑤셔서 더 세게 팠다간 몸이 부서질 것 같았다.",
+  eng: ["Stanley", "Yelnats", "couldn", "’", "t", "dig", "any", "harder", "since", "every", "single", "muscle", "hurt", "."],
 },
 
 {
-  kor: "우리는 먼저 학생들에게 “당신은 돈에 관해 현명한가?”라고 물었다.",
-  eng: ["We", "first", "asked", "students", "“", "Are", "you", "smart", "with", "your", "money", "?", "”"],
+  kor: "그는 목이 말랐고 배도 고팠다.",
+  eng: ["He", "was", "thirsty", "and", "hungry", "."],
 },
 
 {
-  kor: "그래프 1이 보여 주듯이, 30%가 “예”라고 대답한 데 비해, 70%가 “아니요”라고 답했다.",
-  eng: ["As", "Graph", "1", "shows", ",", "70", "answered", "“", "No", "”", "while", "30", "answered", "“", "Yes", ".", "”"],
+  kor: "집에 가고 싶었다.",
+  eng: ["He", "wanted", "to", "go", "home", "."],
 },
 
 {
-  kor: "그다음에 우리는 “아니요”라고 대답한 학생들에게 돈에 관한 그들의 가장 큰 걱정거리가 무엇인지 물었다.",
-  eng: ["We", "then", "asked", "the", "students", "who", "answered", "“", "No", "”", "what", "their", "biggest", "money", "worry", "is", ".", "-"],
+  kor: "안타깝게도 앞으로 18개월 동안 스탠리가 집이라고 부를 곳은 바로 이곳, 캠프 그린 레이크였다.",
+  eng: ["Unfortunately", ",", "Stanley", "’", "s", "home", "for", "the", "next", "18", "months", "would", "be", "right", "here", ",", "at", "Camp", "Green", "Lake", "."],
 },
 
 {
-  kor: "그래프 2가 보여 주듯이, 28%가 돈을 모으는 데 어려움이 있다고 생각하는 것에 비해, 60%는 용돈이 충분하지 않다고 생각한다.",
-  eng: ["As", "Graph", "2", "shows", ",", "60", "think", "they", "don", "’", "t", "have", "enough", "allowance", "while", "28", "think", "they", "have", "difficulty", "saving", "money", "."],
+  kor: "캠프 그린 레이크라는 이름은 끔찍했다.",
+  eng: ["Camp", "Green", "Lake", "was", "a", "terrible", "name", "."],
 },
 
 {
-  kor: "마지막으로, 12%는 필요하지 않은 것에 돈을 소비한다고 말했다.",
-  eng: ["Lastly", ",", "12", "said", "they", "spent", "money", "on", "things", "they", "didn", "’", "t", "need", "."],
+  kor: "초록색은커녕 호수도 없었다.",
+  eng: ["It", "wasn", "’", "t", "green", "and", "there", "was", "no", "lake", "."],
 },
 
 {
-  kor: "우리의 설문 조사는 대다수의 학생들이 자신들이 돈과 관련하여 현명하지 못하다고 생각한다는 것을 보여 준다.",
-  eng: ["Our", "survey", "shows", "that", "the", "majority", "of", "students", "think", "they", "are", "not", "smart", "with", "their", "money", "."],
+  kor: "캠프 그린 레이크는 덥고 모래투성이였다.",
+  eng: ["Camp", "Green", "Lake", "was", "hot", "and", "full", "of", "sand", "."],
 },
 
 {
-  kor: "돈을 관리하는 것은 쉽지 않고, 현명한 소비자가 되는 것에는 노력이 필요하다.",
-  eng: ["Managing", "money", "is", "not", "easy", ",", "and", "becoming", "a", "smart", "spender", "takes", "effort", "."],
+  kor: "사실 캠프라고 부를 수도 없었다.",
+  eng: ["In", "fact", ",", "it", "wasn", "’", "t", "even", "a", "camp", "."],
 },
 
 {
-  kor: "여러분은 돈과 관련된 걱정거리가 있나요?",
-  eng: ["Do", "you", "have", "any", "money", "worries", "?"],
+  kor: "나쁜 소년들을 위한 곳이었다.",
+  eng: ["It", "was", "a", "place", "for", "bad", "boys", "."],
 },
 
 {
-  kor: "Dr. Money와 이야기해 봅시다.",
-  eng: ["Let", "’", "s", "talk", "with", "Dr", ".", "Money", "."],
+  kor: "그렇다면 착한 소년인 스탠리가 여기 온 이유는 무엇이었을까?",
+  eng: ["Then", "what", "was", "a", "good", "boy", "like", "Stanley", "doing", "here", "?"],
 },
 
 {
-  kor: "저는 Jason이에요. 저는 매주 용돈을 받지만, 늘 충분하지 않아요.",
-  eng: ["I", "’", "m", "Jason", ".", "I", "get", "a", "weekly", "allowance", ",", "but", "I", "never", "have", "enough", "."],
+  kor: "그는 운동화 한 켤레를 훔쳤다는 이유로 이곳에 보내졌다.",
+  eng: ["He", "was", "sent", "to", "the", "camp", "for", "stealing", "a", "pair", "of", "sneakers", "."],
 },
 
 {
-  kor: "목요일쯤이면 용돈이 모두 사라지고 없어요.",
-  eng: ["By", "Thursday", ",", "all", "of", "my", "money", "is", "gone", "."],
+  kor: "스탠리가 실제로 운동화를 훔친 것은 아니었다.",
+  eng: ["Stanley", "didn", "’", "t", "really", "steal", "a", "pair", "of", "sneakers", "."],
 },
 
 {
-  kor: "저는 이 문제를 어떻게 해결해야 할지 모르겠어요.",
-  eng: ["I", "don", "’", "t", "know", "how", "to", "solve", "this", "problem", "."],
+  kor: "그저 잘못된 시간에 잘못된 장소에 있었을 뿐이었다.",
+  eng: ["He", "was", "just", "in", "the", "wrong", "place", "at", "the", "wrong", "time", "."],
 },
 
 {
-  kor: "안녕하세요, Dr. Money입니다. 용돈 기입장을 한번 봅시다.",
-  eng: ["Hi", ",", "I", "’", "m", "Dr", ".", "Money", ".", "Let", "’", "s", "look", "at", "your", "spending", "diary", "."],
+  kor: "어느 날 그는 학교에서 집으로 걸어가고 있었다.",
+  eng: ["One", "day", ",", "he", "was", "walking", "home", "from", "school", "."],
 },
 
 {
-  kor: "주초에 용돈의 대부분을 다 써 버렸군요.",
-  eng: ["You", "used", "up", "most", "of", "your", "money", "at", "the", "beginning", "of", "the", "week", "."],
+  kor: "갑자기 허름한 운동화 한 켤레가 하늘에서 떨어졌다.",
+  eng: ["Suddenly", ",", "a", "pair", "of", "old", "sneakers", "fell", "from", "the", "sky", "."],
 },
 
 {
-  kor: "여기 제 조언이 있어요.",
-  eng: ["Here", "’", "s", "my", "tip", "."],
+  kor: "운동화는 그의 머리를 강타했다.",
+  eng: ["The", "sneakers", "hit", "him", "on", "the", "head", "."],
 },
 
 {
-  kor: "일주일 용돈 전부를 가지고 다니지 마세요.",
-  eng: ["Don", "’", "t", "carry", "around", "all", "of", "your", "weekly", "allowance", "."],
+  kor: "그는 무슨 일인지 아버지에게 알리려고 운동화를 들고 뛰기 시작했다.",
+  eng: ["He", "started", "running", "with", "the", "sneakers", "to", "tell", "his", "father", "what", "happened", "."],
 },
 
 {
-  kor: "용돈을 요일별로 나누세요.",
-  eng: ["Divide", "the", "money", "into", "days", "."],
+  kor: "몇 분 후 경찰이 스탠리를 멈추고 왜 뛰고 있는지 물었다.",
+  eng: ["A", "few", "minutes", "later", ",", "the", "police", "stopped", "Stanley", "and", "asked", "him", "why", "he", "was", "running", "."],
 },
 
 {
-  kor: "그리고 날마다 필요한 돈만 들고 다니세요.",
-  eng: ["Then", "carry", "only", "the", "money", "you", "need", "for", "each", "day", "."],
+  kor: "불행히도 그 운동화는 유명 야구 선수 클라이드 리빙스턴의 것이었다.",
+  eng: ["Unfortunately", "for", "Stanley", ",", "the", "sneakers", "belonged", "to", "a", "famous", "baseball", "player", ",", "Clyde", "Livingstone", "."],
 },
 
 {
-  kor: "안녕하세요, Dr. Money.  저는 Steve예요.",
-  eng: ["Hello", ",", "Dr", ".", "Money", ".", "I", "’", "m", "Steve", "."],
+  kor: "그 때문에 스탠리는 캠프 그린 레이크에 오게 된 것이다.",
+  eng: ["That", "was", "why", "Stanley", "ended", "up", "at", "Camp", "Green", "Lake", "."],
 },
 
 {
-  kor: "저는 돈을 모으는 데 어려움이 있어요.",
-  eng: ["I", "have", "difficulty", "saving", "money", "."],
+  kor: "스탠리는 캠프에서 D조에 배정되었다.",
+  eng: ["Stanley", "was", "assigned", "to", "Group", "D", "in", "the", "camp", "."],
 },
 
 {
-  kor: "예를 들면, 저는 좋아하는 가수의 콘서트에 가려고 지난 두 달 동안 저축해 오고 있어요.",
-  eng: ["For", "example", ",", "I", "’", "ve", "been", "saving", "to", "go", "to", "my", "favorite", "singer", "’", "s", "concert", "for", "the", "last", "two", "months", "."],
+  kor: "스탠리의 조에는 여섯 명의 소년이 더 있었다.",
+  eng: ["There", "were", "six", "other", "boys", "in", "Stanley", "’", "s", "group", "."],
 },
 
 {
-  kor: "하지만 여전히 돈이 충분하지 않아요",
-  eng: ["However", ",", "I", "still", "don", "’", "t", "have", "enough", "money", "."],
+  kor: "그들은 모두 X-Ray, Zigzag, Zero 같은 멋진 별명을 가지고 있었다.",
+  eng: ["They", "all", "had", "cool", "names", "like", "X-Ray", ",", "Zigzag", "and", "Zero", "."],
 },
 
 {
-  kor: "저는 무엇을 해야 할지 모르겠어요.",
-  eng: ["I", "don", "’", "t", "know", "what", "to", "do", "."],
+  kor: "각 소년은 매일 구덩이 하나를 파야 했다.",
+  eng: ["Each", "boy", "had", "to", "dig", "one", "hole", "every", "day", "."],
 },
 
 {
-  kor: "어디 봅시다. 지난 몇 주간 용돈의 80%를 쓰고 20%만을 저축했군요.",
-  eng: ["Let", "’", "s", "see", ".", "In", "the", "last", "few", "weeks", ",", "you", "spent", "80", "of", "your", "allowance", "and", "only", "saved", "20", "."],
+  kor: "깊이와 너비가 각각 약 150cm여야 했다.",
+  eng: ["It", "had", "to", "be", "about", "150cm", "deep", "and", "150cm", "wide", "."],
 },
 
 {
-  kor: "나는 당신이 돈을 너무 많이 써 오고 있다고 생각해요.",
-  eng: ["I", "think", "you", "’", "ve", "been", "spending", "too", "much", "."],
+  kor: "Mr. Sir는 “너희가 캐는 것은 인성을 기르기 위해서야.”라고 말했다.",
+  eng: ["Mr", ".", "Sir", "said", ",", "“", "You", "are", "digging", "to", "build", "character", ".", "”"],
 },
 
 {
-  kor: "돈을 모으기 위해서는 더 빠듯한 예산을 세울 필요가 있어요.",
-  eng: ["To", "save", "money", ",", "you", "need", "to", "have", "a", "tighter", "budget", "."],
+  kor: "스탠리가 더 많이 팔수록 그는 더 강해졌다.",
+  eng: ["The", "more", "Stanley", "dug", ",", "the", "stronger", "he", "became", "."],
 },
 
 {
-  kor: "예를 들어, 50%-40%-10% 규칙을 따를 수 있어요.",
-  eng: ["For", "example", ",", "you", "can", "follow", "the", "50", "-40", "-10", "rule", "."],
+  kor: "매일 구덩이를 파는 데 걸리는 시간이 줄어들었다.",
+  eng: ["It", "took", "less", "time", "to", "finish", "his", "hole", "each", "day", "."],
 },
 
 {
-  kor: "50%를 저축하고, 40%를 쓰고, 남은 10%를 자선 단체에 기부하세요.",
-  eng: ["Save", "50", ",", "spend", "40", ",", "and", "donate", "the", "remaining", "10", "to", "charity", "."],
+  kor: "두 번째 주에 스탠리가 구덩이를 거의 마무리할 때 흙 속에서 반짝이는 것을 발견했다.",
+  eng: ["In", "his", "second", "week", ",", "as", "Stanley", "was", "finishing", "his", "hole", ",", "he", "saw", "something", "shiny", "in", "the", "dirt", "."],
 },
 
 {
-  kor: "이 규칙을 따름으로써 돈을 더 잘 관리할 수 있어요.",
-  eng: ["By", "following", "the", "rule", ",", "you", "can", "manage", "your", "money", "better", "."],
+  kor: "스탠리의 심장은 빠르게 뛰기 시작했다.",
+  eng: ["Stanley", "’", "s", "heart", "beat", "faster", "."],
 },
 
 {
-  kor: "그러면 그 티켓을 사기 위해서 돈을 더 빨리 모을 수 있답니다.",
-  eng: ["Then", "you", "can", "save", "money", "faster", "to", "buy", "the", "ticket", "."],
+  kor: "흥미로운 것을 찾으면 하루 휴가를 준다는 말을 들은 적이 있었다.",
+  eng: ["He", "heard", "that", "anyone", "who", "found", "something", "interesting", "would", "be", "given", "the", "day", "off", "."],
 },
 
 {
-  kor: "저는 민지예요. 저는 할인 판매하는 물건을 사는 것을 좋아해요.",
-  eng: ["I", "’", "m", "Minji", ".", "I", "like", "to", "buy", "things", "on", "sale", "."],
+  kor: "스탠리는 조심스럽게 반짝이는 물체를 집어들어 흙을 털어냈다.",
+  eng: ["He", "carefully", "picked", "up", "the", "shiny", "object", "and", "brushed", "off", "the", "dirt", "."],
 },
 
 {
-  kor: "어떤 물건이 할인 판매를 하면 그것이 필요하지 않아도 사요.",
-  eng: ["If", "something", "’", "s", "on", "sale", ",", "I", "buy", "it", "although", "I", "don", "’", "t", "need", "it", "."],
+  kor: "작고 금빛이 도는 관 모양의 물체였다.",
+  eng: ["It", "was", "a", "small", "gold", "tube", "."],
 },
 
 {
-  kor: "지난주에는 할인 판매하는 티셔츠 두 장을 샀지만 저는 이미 티셔츠가 많아요.",
-  eng: ["Last", "week", ",", "I", "bought", "two", "T-shirts", "on", "sale", ",", "but", "I", "already", "have", "many", "."],
+  kor: "너무 가벼워서 진짜 금관일 리는 없었다.",
+  eng: ["But", "it", "couldn", "’", "t", "be", "real", "gold", "since", "it", "was", "too", "light", "."],
 },
 
 {
-  kor: "자신에게 필요한 물건을 산다면 할인 판매하는 물건을 사는 것은 좋습니다.",
-  eng: ["Buying", "things", "on", "sale", "is", "good", "if", "you", "buy", "things", "you", "need", "."],
+  kor: "관 밑부분에는 KB라는 두 글자가 새겨져 있었다.",
+  eng: ["There", "were", "two", "letters", ",", "KB", ",", "at", "the", "bottom", "of", "the", "tube", "."],
 },
 
 {
-  kor: "당신의 경우, 문제는 필요하지도 않은 물건을 산다는 것이에요.",
-  eng: ["In", "your", "case", ",", "the", "problem", "is", "that", "you", "buy", "things", "you", "don", "’", "t", "even", "need", "."],
+  kor: "KB는 무엇을 뜻하는 걸까?",
+  eng: ["What", "did", "KB", "stand", "for", "?"],
 },
 
 {
-  kor: "여기 몇 가지 조언이 있어요.",
-  eng: ["Here", "’", "s", "some", "advice", "."],
-},
-
-{
-  kor: "무언가를 사기 전에 “이것이 정말 필요한가?”라고 스스로에게 물어보세요.",
-  eng: ["Before", "you", "buy", "something", ",", "ask", "yourself", ",", "“", "Do", "I", "really", "need", "this", "?", "”"],
-},
-
-{
-  kor: "또한 쇼핑하러 가기 전에 쇼핑 목록을 만드세요.",
-  eng: ["Also", ",", "before", "you", "go", "shopping", ",", "make", "a", "shopping", "list", "."],
-},
-
-{
-  kor: "물건들이 할인 판매 중이라고 해도 목록에 없는 물건들은 사지 마세요.",
-  eng: ["Don", "’", "t", "buy", "items", "that", "aren", "’", "t", "on", "the", "list", "even", "if", "they", "’", "re", "on", "sale", "."],
-},
-
-{
-  kor: "그러면 즉석에서 물건을 사지 않을 거예요.",
-  eng: ["Then", "you", "won", "’", "t", "buy", "things", "on", "the", "spot", "."],
+  kor: "스탠리의 심장은 더욱 빠르게 뛰었다.",
+  eng: ["Stanley", "’", "s", "heart", "beat", "even", "faster", "."],
 },
         ]
       },
