--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
         ]
       },
       {
-        title: "Lesson 5 - A Surprise",
+        title: "Lesson 5 - From Trash to Music",
         problems: [
 {
   kor: "기쁨의 눈물이 내 뺨을 타고 흐른다.",
